Increase x-site configuration symmetry #235
* Make x-site configuration as symmetric as possible.
* Only site name should differ between configuration of different sites.
* Update documentation to new representation.
* Fix put HTTP response code in x-site Minikube README.
* Added create-cache, put and get steps to x-site OpenShift example.

--- a/deploy/cr/xsite-minikube/xsite_a.yaml
+++ b/deploy/cr/xsite-minikube/xsite_a.yaml
@@ -4,6 +4,8 @@ metadata:
   name: example-infinispan
 spec:
   replicas: 2
+  expose:
+    type: NodePort
   service:
     type: DataGrid
     sites:
@@ -11,9 +13,10 @@ spec:
         name: SiteA
         expose:
           type: NodePort
-          externalIPs:
-            - 192.168.99.147
-      backups:
+      locations:
+      - name: SiteA
+        url: minikube://192.168.99.101:8443
+        secretName: site-secrets
       - name: SiteB
-        url: minikube://192.168.99.148:8443
-        secretName: site-b-secrets
+        url: minikube://192.168.99.102:8443
+        secretName: site-secrets
