--- a/deploy/cr/xsite-minikube/xsite_b.yaml
+++ b/deploy/cr/xsite-minikube/xsite_b.yaml
@@ -4,6 +4,8 @@ metadata:
   name: example-infinispan
 spec:
   replicas: 2
+  expose:
+    type: NodePort
   service:
     type: DataGrid
     sites:
@@ -11,9 +13,10 @@ spec:
         name: SiteB
         expose:
           type: NodePort
-          externalIPs:
-            - 192.168.99.148
-      backups:
+      locations:
       - name: SiteA
-        url: minikube://192.168.99.147:8443
-        secretName: site-a-secrets
+        url: minikube://192.168.99.101:8443
+        secretName: site-secrets
+      - name: SiteB
+        url: minikube://192.168.99.102:8443
+        secretName: site-secrets
