Set dev-preview as default channel #214

--- a/deploy/olm-catalog/infinispan.package.yaml
+++ b/deploy/olm-catalog/infinispan.package.yaml
@@ -3,5 +3,5 @@ channels:
   name: dev-preview
 - currentCSV: infinispan-operator.v1.0.0
   name: stable
-defaultChannel: stable
+defaultChannel: dev-preview
 packageName: infinispan
