ISPN-11339 adding details about remote clients (from master)

--- a/documentation/asciidoc/topics/yaml_annotated/cr_cache_service.yaml
+++ b/documentation/asciidoc/topics/yaml_annotated/cr_cache_service.yaml
@@ -1,24 +1,24 @@
 apiVersion: infinispan.org/v1
 kind: Infinispan
 metadata:
-  name: {example_crd_name}
+  name: {example_crd_name} <1>
 spec:
   image: {image_resource}
-  replicas: 4
+  replicas: 4 <2>
   service:
-    type: Cache <1>
-  security: <2>
-    endpointSecretName: endpoint-identities
-    endpointEncryption:
+    type: Cache <3>
+  security:
+    endpointSecretName: endpoint-identities <4>
+    endpointEncryption: <5>
         type: secret
         certSecretName: tls-secret
-  container: <3>
+  container: <6>
     extraJvmOpts: "-XX:NativeMemoryTracking=summary"
     cpu: "2000m"
     memory: 1Gi
-  logging: <4>
+  logging: <7>
     categories:
       org.infinispan: trace
       org.jgroups: trace
-  expose: <5>
+  expose: <8>
     type: LoadBalancer
