--- a/deploy/olm-catalog/infinispan-operator.v1.1.1.Final.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.v1.1.1.Final.clusterserviceversion.yaml
@@ -1,7 +1,7 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
 metadata:
-  name: infinispan-operator.v9.9.9
+  name: infinispan-operator.v1.1.1.Final
   namespace: placeholder
   annotations:
     tectonic-visibility: ocs
@@ -22,8 +22,8 @@ metadata:
         }
       ]
     description: Create and manage Infinispan clusters.
-    containerImage: docker.io/jboss/infinispan-operator:latest
-    createdAt: 2000-01-01T12:00:00Z
+    containerImage: docker.io/jboss/infinispan-operator:1.1.1.Final
+    createdAt: 2020-02-21T10:54:20Z
     support: Infinispan
     certified: "false"
 spec:
@@ -50,7 +50,7 @@ spec:
     Each Infinispan pod requests `0.25` (limit `0.50`) CPUs, 512MiB of memory and 1Gi of ReadWriteOnce persistent volume.
     You can adjust resource allocation with the `.spec.container.cpu` and `.spec.container.memory` fields.
   keywords: ['infinispan', 'key value', 'database', 'datagrid', 'open source']
-  version: 9.9.9
+  version: 1.1.1.Final
   minKubeVersion: 1.11.0
   maturity: alpha
   maintainers:
@@ -58,10 +58,10 @@ spec:
       email: infinispan-dev@lists.jboss.org
   provider:
     name: Infinispan
-  replaces: infinispan-operator.v9.9.8
+  replaces: infinispan-operator.v1.1.0
   relatedImages:
     - name: infinispan-server
-      image: infinispan/server:latest
+      image: infinispan/server:10.1.2.Final
   labels:
     operated-by: infinispan-operator
   selector:
@@ -160,7 +160,7 @@ spec:
                   - name: infinispan-operator
                     command:
                       - infinispan-operator
-                    image: jboss/infinispan-operator:latest
+                    image: jboss/infinispan-operator:1.1.1.Final
                     ports:
                       - containerPort: 60000
                         name: metrics
@@ -176,7 +176,7 @@ spec:
                       - name: OPERATOR_NAME
                         value: "infinispan-operator"
                       - name: DEFAULT_IMAGE
-                        value: "infinispan/server:latest"
+                        value: "infinispan/server:10.1.2.Final"
   customresourcedefinitions:
     owned:
       - name: infinispans.infinispan.org
