--- a/deploy/olm-catalog/infinispan.package.yaml
+++ b/deploy/olm-catalog/infinispan.package.yaml
@@ -1,7 +1,7 @@
 channels:
-- currentCSV: infinispan-operator.v9.9.9
+- currentCSV: infinispan-operator.v1.1.1.Final
   name: dev-preview
-- currentCSV: infinispan-operator.v9.9.8
+- currentCSV: infinispan-operator.v1.1.0
   name: stable
 defaultChannel: dev-preview
 packageName: infinispan
