Fix RBAC permissions

--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -33,6 +33,7 @@ rules:
       - apps
     resources:
       - deployments
+      - deployments/finalizers
       - daemonsets
       - replicasets
       - statefulsets
