Change KUBECONFIG logic

--- a/.travis.yml
+++ b/.travis.yml
@@ -58,10 +58,10 @@ jobs:
     - stage: "Test"
       name: "Kubernetes"
       before_script:
+        - export KUBECONFIG="${HOME}/.kube/config"
         - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
         - curl -Lo kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-linux-amd64 && chmod +x kind && sudo mv kind /usr/local/bin/
         - kind create cluster --config kind-config.yaml
-        - export KUBECONFIG="$(kind get kubeconfig-path)"
         - export MAKE_DATADIR_WRITABLE=true
         - export GO111MODULE=on
       script:
