--- a/kind-config.yaml
+++ b/kind-config.yaml
@@ -1,7 +1,8 @@
 kind: Cluster
-apiVersion: kind.sigs.k8s.io/v1alpha3
+apiVersion: kind.sigs.k8s.io/v1alpha4
 nodes:
   - role: control-plane
+  - role: worker
     extraPortMappings:
       - containerPort: 30222
         hostPort: 11222
