ISPN-11488 documentation edits and corrections

--- a/documentation/asciidoc/topics/yaml_annotated/cr_minimal.yaml
+++ b/documentation/asciidoc/topics/yaml_annotated/cr_minimal.yaml
@@ -1,6 +1,6 @@
-apiVersion: infinispan.org/v1 <1>
-kind: Infinispan <2>
+apiVersion: infinispan.org/v1
+kind: Infinispan
 metadata:
-  name: <3>
+  name: <1>
 spec:
-  replicas: <4>
+  replicas: <2>
