adapted old files to new crd struct

--- a/manual/xsite-openshift/Makefile
+++ b/manual/xsite-openshift/Makefile
@@ -31,8 +31,11 @@ endef
 
 define deploy-operator
 oc new-project "${NAMESPACE}" || true
-oc apply -f ../../deploy/rbac.yaml
-oc apply -f ../../deploy/crd.yaml
+oc apply -f ../../deploy/role.yaml
+oc apply -f ../../deploy/service_account.yaml
+oc apply -f ../../deploy/role_binding.yaml
+oc apply -f ../../deploy/crds/infinispan.org_infinispans_crd.yaml
+oc apply -f ../../deploy/crds/infinispan.org_caches_crd.yaml
 cp ../../deploy/operator.yaml .
 awk '{sub(/jboss\/infinispan-operator/,"${IMAGE}")}1' operator.yaml > temp.txt && mv temp.txt operator.yaml
 oc apply -f operator.yaml
