--- a/test-integration/operator-tests/src/test/resources/infinispans/minimal_setup.yaml
+++ b/test-integration/operator-tests/src/test/resources/infinispans/minimal_setup.yaml
@@ -1,6 +1,6 @@
 apiVersion: infinispan.org/v1
 kind: Infinispan
 metadata:
-  name: infinispan-minimal
+  name: minimal-setup
 spec:
-  replicas: 1
+  replicas: 2
