--- a/test-integration/operator-tests/pom.xml
+++ b/test-integration/operator-tests/pom.xml
@@ -84,17 +84,20 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
+                <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${version.maven.surefire}</version>
                 <configuration>
                     <testFailureIgnore>true</testFailureIgnore>
                     <trimStackTrace>false</trimStackTrace>
-                    <systemProperties>
-                        <kubernetes.auth.tryKubeConfig>false</kubernetes.auth.tryKubeConfig>
-                        <sun.net.spi.nameservice.provider.1>dns,sun</sun.net.spi.nameservice.provider.1>
-                        <sun.net.spi.nameservice.provider.2>default</sun.net.spi.nameservice.provider.2>
-                    </systemProperties>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
