--- a/manual/xsite-minikube/Makefile
+++ b/manual/xsite-minikube/Makefile
@@ -126,7 +126,7 @@ create-cache:
 developer-password = $$(kubectl get secret \
     example-infinispan-generated-secret \
     -o jsonpath="{.data.identities\.yaml}" \
-    | base64 -D \
+    | base64 --decode \
     | yq -r .credentials[0].password)
 
 url = $$(minikube service \
