--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -152,6 +152,40 @@ spec:
               - '*'
             verbs:
               - '*'
+      clusterPermission:
+        - serviceAccountName: infinispan-operator
+          rules:
+          - apiGroups:
+              - ""
+            resources:
+              - nodes
+              - nodes/status
+            verbs:
+              - get
+              - list
+              - watch
+          - apiGroups:
+              - apiextensions.k8s.io
+            resources:
+              - customresourcedefinitions
+              - customresourcedefinitions/status
+            verbs:
+              - get
+              - list
+              - watch
+          - apiGroups:
+              - ""
+            resources:
+              - nodes/metrics
+              - nodes/spec
+            verbs:
+              - get
+          - apiGroups:
+              - ""
+            resources:
+              - nodes/stats
+            verbs:
+              - get
       deployments:
         - name: infinispan-operator
           spec:
