Added rights to create Route/Ingress

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -41,6 +41,19 @@ rules:
   verbs:
   - '*'
 - apiGroups:
+  - route.openshift.io
+  resources:
+  - routes
+  - routes/custom-host
+  verbs:
+  - '*'
+- apiGroups:
+  - networking.k8s.io
+  resources:
+  - ingresses
+  verbs:
+  - '*'
+- apiGroups:
   - monitoring.coreos.com
   resources:
   - servicemonitors
