--- a/deploy/crds/infinispan.org_v2alpha1_cache_cr.yaml
+++ b/deploy/crds/infinispan.org_v2alpha1_cache_cr.yaml
@@ -3,5 +3,7 @@ kind: Cache
 metadata:
   name: example-cache
 spec:
-  # Add fields here
-  size: 3
+  adminAuth:
+    secretName: basic-auth
+  clusterName: example-infinispan
+  name: mycache
