--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -19,6 +19,20 @@ metadata:
           "spec": {
             "replicas": 1
           }
+        },
+        {
+          "apiVersion": "infinispan.org/v2alpha1",
+          "kind": "Cache",
+          "metadata": {
+            "name": "example-cache"
+          },
+          "spec": {
+            "adminAuth": {
+              "secretName": "basic-auth"
+            },
+            "clusterName": "example-infinispan",
+            "name": "mycache"
+          }
         }
       ]
     description: Create and manage Infinispan clusters.
@@ -175,6 +189,10 @@ spec:
                         value: "infinispan/server:latest"
   customresourcedefinitions:
     owned:
+      - description: Cache is the Schema for the caches API
+        kind: Cache
+        name: caches.infinispan.org
+        version: v2alpha1
       - name: infinispans.infinispan.org
         version: v1
         kind: Infinispan
