--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -152,7 +152,7 @@ spec:
               - '*'
             verbs:
               - '*'
-      clusterPermission:
+      clusterPermissions:
         - serviceAccountName: infinispan-operator
           rules:
           - apiGroups:
